<resources>
    <string name="app_name">Bonch Dev Messenger</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="pass">Pass</string>
    <string name="send_icon">Send icon</string>
    <string name="write_text">Write text</string>
    <string name="mail">Takexito@Gmail.com</string>
    <string name="name">Takexito</string>
    <string name="confrim_email">Confrim Email</string>
    <string name="change_pass">Change Pass</string>
    <string name="sign_out">Sign Out</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="re_password">Re password</string>
    <string name="confirm">Confirm</string>
    <string name="change_password">Change Password</string>
    <string name="names">Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile">ProfileFragment</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
